# Ekwos

./: '  .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  build_shaders.sh  game  readme.md
src/: arena.c  arena.h  args.c  common.h  entity.c  entity.h  exit.h  exits.h  main.c  main.cpp  primitives.h  render_context.c  render_context.h  render_pipeline.c  render_pipeline.h  shader.c  shader.h  string.h  vk_context.c  vk_context.h  vk_extension.h  vulkan_extension.c  vulkan_extension.h  window.c  window.cpp  window.h
src/asset/: asset_load.c  asset_load.h  asset_manager.c  asset_manager.h
src/core/: arena.c  arena.h  args.c  args.h  common.c  common.h  heap.c  heap.h  linear_algebra.c  linear_algebra.h  log.c  log.h  pool.c  pool.h  thread_context.c  thread_context.h  window.c  window.h
src/game/: args.c  args.h  camera.c  camera.h  entity.c  entity.h  game.c  game.h
src/os/: os.c  os.h
src/render/: render_allocator.c  render_allocator.h  render_buffer.c  render_buffer.h  render_buffers.c  render_buffers.h  render_common.h  render_context.c  render_context.h  render_descriptor.h  render_mesh.c  render_mesh.h  render_model.c  render_model.h  render_pipeline.c  render_pipeline.h  render_uploader.c  render_uploader.h  vk_extension.c  vk_extension.h
src/shaders/: frag.frag  simple.frag  simple.vert  vert.vert
